        Bug 22795: favicons should be saved to webarchives

<https://bugs.webkit.org/show_bug.cgi?id=22795>

        Reviewed by Darin Adler.

WebCore:

        Test: webarchive/test-link-rel-icon.html

        * html/HTMLLinkElement.cpp:
        (WebCore::HTMLLinkElement::addSubresourceAttributeURLs): Do not add
        favicon URLs to the list since no ArchiveResource or CachedResource
        is ever created for them.
        * loader/archive/cf/LegacyWebArchive.cpp:
        (WebCore::LegacyWebArchive::create): Handle favicons as a special
        case for all main resources.
        * loader/icon/IconDatabase.cpp:
        (WebCore::IconDatabase::close): Actually close the SQLite database
        so that isOpen() returns false when called.  Added an ASSERT() for
        good measure.

WebKitTools:

        * DumpRenderTree/LayoutTestController.cpp:
        (setIconDatabaseEnabledCallback): Added.
        (setJavaScriptProfilingEnabledCallback): Realphabetized.
        (LayoutTestController::staticFunctions): Added entry for calling
        LayoutTestController.setIconDatabaseEnabled(bool) from JavaScript.
        * DumpRenderTree/LayoutTestController.h:
        (setIconDatabaseEnabledCallback): Added declaration.
        (setJavaScriptProfilingEnabledCallback): Realphabetized.

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (runTest): Disable the icon database before each test.
        * DumpRenderTree/mac/LayoutTestControllerMac.mm:
        (LayoutTestController::setIconDatabaseEnabled): Added.
        (LayoutTestController::setJavaScriptProfilingEnabled): Realphabetized.

        * DumpRenderTree/win/DumpRenderTree.cpp:
        (runTest): Disable the icon database before each test.
        * DumpRenderTree/win/LayoutTestControllerWin.cpp:
        (LayoutTestController::setIconDatabaseEnabled): Added.

LayoutTests:

        Note that this test case contains a workaround for Bug 21026 and
        <rdar://problem/6240826> which may be removed once that is fixed.

        * webarchive/resources/favicon.ico: Copied from LayoutTests/fast/images/resources/favicon.ico.
        * webarchive/test-link-rel-icon-expected.webarchive: Added.
        * webarchive/test-link-rel-icon.html: Added.

Canonical link: https://commits.webkit.org/32102@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39904 268f45cc-cd09-0410-ab3c-d52691b4dbfc