WebKitTools/DumpRenderTree/win/DumpRenderTree.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2005, 2006, 2007, 2008 Apple Inc.  All rights reserved.
+ * Copyright (C) 2005, 2006, 2007, 2008, 2009 Apple Inc.  All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -718,6 +718,8 @@ static void runTest(const string& testPathOrURL)
     ::gLayoutTestController = new LayoutTestController(pathOrURL, expectedPixelHash);
     done = false;
     topLoadingFrame = 0;
+
+    gLayoutTestController->setIconDatabaseEnabled(false);
 
     if (shouldLogFrameLoadDelegates(pathOrURL.c_str()))
         gLayoutTestController->setDumpFrameLoadCallbacks(true);
